<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.transit_ads.tabs.DetaillsFetch"
    tools:showIn="@layout/activity_detaills_fetch"
    android:id="@+id/backgroundLayout"
    android:fitsSystemWindows="true"
    android:background="@drawable/aboutbengaluru">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/details_fetch_two"
        android:id="@+id/details_txt_two"
        android:textColor="#ffffff"
        android:textSize="45dp"
        android:layout_below="@+id/details_txt_one"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/submit_btn"
        android:id="@+id/linearLayout2">

    <EditText
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:id="@+id/tvName"
        android:hint="Enter name"
        android:textColorHint="#ffffff"
        android:backgroundTint="#ffffff"
        android:layout_above="@+id/submit_btn"
        android:layout_alignRight="@+id/imageView6"
        android:layout_alignEnd="@+id/imageView6"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_marginBottom="30dp"
        android:imeOptions="actionNext"
        android:layout_marginLeft="110dp" />

    <EditText
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:inputType="number"
        android:digits="0123456789"
        android:ems="10"
        android:id="@+id/tvPhone"
        android:textColorHint="#ffffff"
        android:backgroundTint="#ffffff"
        android:hint="Enter phone number"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_alignTop="@+id/tvName"
        android:layout_toRightOf="@+id/imageView6"
        android:layout_toEndOf="@+id/imageView6"
        android:maxLength="10"
        android:imeOptions="actionDone"
        android:layout_marginLeft="100dp" />
    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:background="@drawable/curve_button_white"
        android:textSize="20dp"
        android:text="@string/submit_button"
        android:layout_alignTop="@+id/skip_btn"
        android:layout_alignRight="@+id/details_txt_two"
        android:layout_alignEnd="@+id/details_txt_two" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/skip_button"
        android:id="@+id/skip_btn"
        android:background="@drawable/curve_button_white"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/transitLogo"
        android:layout_alignStart="@+id/details_txt_two"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:layout_width="450dp"
        android:layout_height="180dp"
        android:id="@+id/transitLogo"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="* T&amp;C apply"
        android:id="@+id/terms_conditions"
        android:layout_alignBottom="@+id/submit_btn"
        android:layout_toRightOf="@+id/submit_btn"
        android:layout_toEndOf="@+id/submit_btn"
        android:textColor="#ffffff"
        android:layout_marginLeft="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/linearLayout2"
        android:id="@+id/tc_layout"
        android:background="#e2666464"
        android:visibility="invisible"
        android:layout_below="@+id/details_txt_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tc_one"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tc_two"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tc_three"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/details_fetch_one"
        android:id="@+id/details_txt_one"
        android:textColor="#ffffff"
        android:textSize="45dp"
        android:paddingTop="20dp"
        android:layout_below="@+id/transitLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp" />

</RelativeLayout>
