<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.transit_ads.tabs.OtpPromoCode"
    tools:showIn="@layout/activity_otp_promo_code"
    android:id="@+id/backgroundLayout">

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="John Doeu"
        android:id="@+id/user_name_txt"
        android:textColor="#F7921E"
        android:textIsSelectable="true"
        android:textSize="30dp"
        android:layout_alignTop="@+id/hello_txt"
        android:layout_toLeftOf="@+id/access_btn"
        android:layout_toRightOf="@+id/hello_txt"
        android:layout_toEndOf="@+id/hello_txt"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_otp_page2"
        android:id="@+id/txt_two"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_below="@+id/user_name_txt"
        android:layout_alignRight="@+id/transitLogo"
        android:layout_alignEnd="@+id/transitLogo" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/otpText"
        android:textColorHint="#ffffff"
        android:hint="One -Time PIN"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:backgroundTint="#ffffff"
        android:textSize="25dp"
        android:layout_below="@+id/txt_two"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:maxLength="6"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="or"
        android:id="@+id/textView11"
        android:layout_below="@+id/otpText"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textColor="#ffffff"
        android:visibility="invisible" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/promoText"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:textColorHint="#ffffff"
        android:backgroundTint="#ffffff"
        android:hint="Promo Code"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="25dp"
        android:maxLength="6"
        android:imeOptions="actionDone"
        android:visibility="gone" />

    <ImageView
        android:layout_width="450dp"
        android:layout_height="130dp"
        android:id="@+id/transitLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/access_btn"
        android:background="@drawable/curve_button_white"
        android:layout_marginTop="54dp"
        android:text="@string/submit_button"
        android:textSize="20dp"
        android:layout_below="@+id/textView11"
        android:layout_alignRight="@+id/otpText"
        android:layout_alignEnd="@+id/otpText" />

    <!--<ImageButton-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/access_btn"-->
        <!--android:src="@drawable/access_btn"-->
        <!--android:layout_below="@+id/promoText"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:background="@android:color/transparent" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ot_page_txt1"
        android:id="@+id/hello_txt"
        android:textSize="30dp"
        android:textColor="#ffffff"
        android:paddingTop="15dp"
        android:layout_alignLeft="@+id/txt_two"
        android:layout_alignStart="@+id/txt_two"
        android:layout_below="@+id/transitLogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txt_one"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_above="@+id/txt_two"
        android:layout_toRightOf="@+id/user_name_txt"
        android:layout_alignTop="@+id/user_name_txt"
        android:text="@string/user_otp_page1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/num_with_xx"
        android:id="@+id/two_digit_num"
        android:layout_toRightOf="@+id/txt_two"
        android:textSize="30dp"
        android:textColor="#F7921E"
        android:layout_below="@+id/txt_one"
        android:layout_alignBottom="@+id/txt_two"
        android:layout_alignRight="@+id/txt_one"
        android:layout_alignEnd="@+id/txt_one" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/curve_button_white"
        android:text="@string/skip_button"
        android:id="@+id/skip_for_home"
        android:textSize="20dp"
        android:layout_alignTop="@+id/access_btn"
        android:layout_alignLeft="@+id/otpText"
        android:layout_alignStart="@+id/otpText" />

</RelativeLayout>
