<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="300dp"
    android:background="#F7921E"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:paddingBottom="15dp"
        android:layout_weight="0.03"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/inputdailogheading"
            android:id="@+id/textView2"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dailoginput"
        android:textColor="#000000"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Name : "
            android:id="@+id/textView20"
            android:textSize="22dp"
            android:layout_marginTop="30dp"
            android:textColor="#000000"
            android:layout_marginLeft="5dp" />
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/tvName"
            android:layout_weight="0.26"
            android:layout_alignBottom="@+id/textView20"
            android:layout_toRightOf="@+id/textView20"
            android:textColor="#000000"
            android:imeOptions="actionNext"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Contact : "
            android:id="@+id/textView22"
            android:textSize="22dp"
            android:textColor="#000000"
            android:layout_toEndOf="@+id/tvName"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/tvPhone"
            android:textColor="#000000"
            android:layout_alignTop="@+id/tvName"
            android:layout_toRightOf="@+id/textView22"
            android:layout_toEndOf="@+id/textView22"
            android:imeOptions="actionDone"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.32"
        android:layout_marginBottom="0dp">


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:background="@drawable/curve_button_white"
            android:clickable="true"
            android:text="@string/submit_button"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="90dp" />


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:background="@drawable/curve_button_white"
            android:clickable="true"
            android:text="@string/cancel_button"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_alignTop="@+id/btn_submit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="90dp" />


    </RelativeLayout>

</LinearLayout>

