<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PoweredByPage"
    android:fitsSystemWindows="true"
    android:id="@+id/backgroundLayout"
    android:background="#0e0d0d">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginBottom="13dp"
        android:text="@string/contact_us"
        android:id="@+id/contact_us"
        android:textColor="#ffffff"
        android:layout_above="@+id/tvPhone"
        android:layout_centerHorizontal="true"
        android:textSize="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:id="@+id/tvPhone"
        android:textColor="#ffffff"
        android:textSize="27dp"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_toLeftOf="@+id/imageView14"
        android:layout_toStartOf="@+id/imageView14"
        android:layout_marginRight="67dp"
        android:layout_marginEnd="67dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/company_email"
        android:textColor="#ffffff"
        android:textSize="27sp"
        android:layout_alignTop="@+id/imageView14"
        android:layout_toRightOf="@+id/imageView14"
        android:layout_toEndOf="@+id/imageView14"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:id="@+id/imageView5"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/tvPhone"
        android:layout_toStartOf="@+id/tvPhone"
        android:src="@drawable/phone_icon"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:id="@+id/imageView14"
        android:src="@drawable/mail_icon"
        android:paddingBottom="10dp"
        android:layout_alignTop="@+id/tvPhone"
        android:layout_alignRight="@+id/contact_us"
        android:layout_alignEnd="@+id/contact_us" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:id="@+id/imageView40"
        android:src="@drawable/digitalindia"
        android:layout_marginBottom="42dp"
        android:layout_above="@+id/contact_us"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/app_color"
        android:layout_above="@+id/imageView40"
        android:layout_toLeftOf="@+id/contact_us"
        android:layout_toStartOf="@+id/contact_us"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=". . . please wait "
        android:id="@+id/progress_txt"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_toRightOf="@+id/progressBar"
        android:layout_toEndOf="@+id/progressBar"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/powerd_by"
        android:id="@+id/campaign"
        android:textColor="#ffffff"
        android:textSize="40dp"
        android:layout_marginBottom="84dp"
        android:layout_above="@+id/digiTransitLogo"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="620dp"
        android:layout_height="140dp"
        android:id="@+id/digiTransitLogo"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/progress_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
